idris2/tests/typedd-book/chapter14/expected
1/4: Building DoorJam (DoorJam.idr)
2/4: Building ATM (ATM.idr)
3/4: Building Hangman (Hangman.idr)
Error: While processing right hand side of hangman. Can't solve constraint between: S ?letters and length (letters "testing").

Hangman.idr:73:14--73:22
    |
 73 |              gameLoop
    |              ^^^^^^^^

